# WC3Helper

./: .gitignore  CMakeLists.txt  README.md  common.h  helper.cpp  helper.def  jass.cpp  jass.h  pch.cpp
.github/workflows/: build-cmake-win32-pages.yml
plugins/: ChatCommand.cpp  CoolDownDraw.cpp  CoolDownDraw.h  CoolDownDrawD3D9.cpp  CoolDownDrawD3D9.h  UnitCommand.cpp  UnitCommand.h  mana.cpp  mana.h  plugin.h  unitinfo.cpp  unitinfo.h  wfe.cpp  wfe.h  widescreen.cpp  widescreen.h
spdlog/sinks/: qt_sinks.h
